feat: ui update dashboard and interview prep page

--- a/frontend/intervueai/src/index.css
+++ b/frontend/intervueai/src/index.css
@@ -21,6 +21,7 @@
 /*  custom scrollbar styling */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
